--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -12,12 +12,12 @@
   --ifm-color-primary-light: #f2a7a0;
   --ifm-color-primary-lighter: #f4b6b0;
   --ifm-color-primary-lightest: #fbe2e0;
-  --ifm-footer-background-color: #27464F;
+  --ifm-footer-background-color: theme(colors.slate.800);
   --ifm-code-font-size: 95%;
-  --text-color: #27464F;
-  --background-color: white;
-  --background-color-inverted: #27464F;
-  --text-color-inverted: white;
+  --text-color: theme(colors.slate.800);
+  --background-color: theme(colors.gray.100);
+  --background-color-inverted: theme(colors.slate.800);
+  --text-color-inverted: theme(colors.gray.100);
   --ifm-button-border-radius: calc(var(--ifm-global-radius) * var(--ifm-button-size-multiplier) * 4);
   color: var(--text-color);
   font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -25,9 +25,9 @@
 }
 
 html[data-theme='dark'] {
-  --background-color-inverted: white;
-  --background-color: #27464F;
-  --text-color-inverted: #13262b;
+  --background-color-inverted: theme(colors.slate.900);
+  --background-color: theme(colors.slate.800);
+  --text-color-inverted: theme(colors.slate.200);
   --text-color: #F2F4F9;
 }
 
@@ -44,7 +44,7 @@ html[data-theme='dark'] .docusaurus-highlight-code-line {
 
 
 .footer--dark {
-  --ifm-footer-background-color: #27464F;
+  --ifm-footer-background-color: theme(colors.slate.800);
 }
 
 .logo-wide {
